<resources>
    <string name="app_name">SmartAlarm</string>
    <string name="action_settings">Settings</string>
    <string name="armed">Armed</string>
    <string name="sensors_ok">All sensors OK</string>
    <string name="disable_alarm">Disarm alarm</string>
    <string name="disarmed">Disarmed</string>
    <string name="enable_alarm">Arm alarm</string>
    <string name="intrusion_alert">Intrusion alert</string>
    <string name="countdown_initiated">Motion detected: countdown initiated</string>
    <string name="sirens_active">Alarm sirens active</string>
    <string name="menu">Menu</string>
    <string name="alarm_being_setup">Alarm is currently being set up</string>
    <string name="nineoneone">Call 911</string>
    <string name="sensor_overview">Sensor overview</string>
    <string name="title_activity_pin">PINActivity</string>
    <string name="enter_pin_below">Please enter your PIN code below</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_unknown">Unknown status</string>
    <string name="error_communicating">Error communicating with alarm.</string>
    <string name="pref_notifications_summary">Enable notifications for alarm status changes and intrusion alerts</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="enter_old_pin">Enter your old PIN code</string>
    <string name="enter_new_pin">Enter a new PIN code</string>
    <string name="confirm_new_pin">Confirm your new PIN</string>
    <string name="confirm_title">Confirm PIN</string>
    <string name="oldpin_title">Old PIN</string>
    <string name="newpin_title">New PIN</string>
</resources>
